<resources>
    <string name="app_name">ProjetFinal</string>
    <string name="connexiontitle">Connexion</string>
    <string name="identifiez_vous">Identifiez-vous!</string>
    <string name="identifiant">Identifiant</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexionBoutton">CONNEXION</string>
    <string name="se_souvenir_de_moi">Se souvenir de moi</string>
    <string name="imagedeconnexion">imageDeConnexion</string>
    <string name="ajouter_une_ville">Ajouter une ville</string>
    <string name="afficher_les_favoris">Afficher les favoris</string>
    <string name="afficher_le_budget">Afficher le budget</string>
    <string name="gestion_des_succursales">Gestion des succursales</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="imagedajout">imagedajout</string>
    <string name="ajout_de_succursale">Ajout de Succursale</string>
    <string name="nom_succursale">Ville</string>
    <string name="budget_succursale">Budget</string>
    <string name="ajouter_succursale">Ajout de succursale</string>
    <string name="modification_de_succursale">Modification de Succursale</string>
    <string name="imagedemodification">imagedemodificaiton</string>
    <string name="modifier_succursale">modifier succursale</string>
    <string name="ville_placeholder">Ville: Placeholder</string>
    <string name="budget_placeholder">Budget: Placeholder</string>
    <string name="succursales_favoris">Succursales Favoris</string>
    <string name="format_ville">Ville: %s</string>
    <string name="format_budget">Budget: %s $</string>
    <string name="bannerbudget">BannerBudget</string>
    <string name="budget_de_succursale">Budget de Succursale</string>
    <string name="afficher_budget">Afficher Budget</string>
    <string name="favoris">Favoris</string>
    <string name="supprimer">Supprimer</string>
    <string name="modifier">Modifier</string>
    <string name="format_ville_budget">Ville: %1$s, Budget: %2$s</string>
    <string name="aucune_succursale_pr_sente">Aucune succursale présente</string>
    <string name="deja_compte">Vous avez deja un compte?</string>
    <string name="inscription">S\'inscrire</string>
    <string name="prenom">Prenom</string>
    <string name="nom">Nom</string>
    <string name="matricule">Matricule</string>
    <string name="inscrivez_vous">Inscrivez-vous</string>
    <string name="inscription_title">Inscription</string>
    <string name="connexion">Connectez-vous</string>
    <string name="pas_compte">Vous n\'avez pas de compte?</string>
</resources>