<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InscriptionFragment">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/inscriptionToolbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:background="#DCFFC107"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:text="@string/inscription_title"
            android:textColor="#696969"
            android:textSize="24sp"
            android:textStyle="bold"/>
    </androidx.appcompat.widget.Toolbar>

    <!-- Image -->
    <ImageView
        android:id="@+id/imageInscription"
        android:layout_width="0dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toBottomOf="@id/inscriptionToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/imagedeconnexion"
        android:scaleType="centerCrop"
        android:src="@drawable/inscription"
        tools:ignore="ImageContrastCheck" />

    <!-- Titre de la Page -->
    <TextView
        android:id="@+id/textInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageInscription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:text="@string/inscrivez_vous"
        android:textSize="30sp"
        android:textColor="#FF5722"
        android:textStyle="bold"/>

    <!-- Champ Matricule -->
    <EditText
        android:id="@+id/editTextMatricule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textInscription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/matricule"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="text"
        android:autofillHints="Matricule" />

    <!-- Champ Mot de Passe -->
    <EditText
        android:id="@+id/editTextMotDePasse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextMatricule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/mot_de_passe"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="textPassword" />

    <!-- Champ Nom -->
    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextMotDePasse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/nom"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="text" />

    <!-- Champ Prénom -->
    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextNom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:hint="@string/prenom"
        android:padding="12dp"
        android:textSize="20sp"
        android:inputType="text" />

    <!-- Bouton d'Inscription -->
    <Button
        android:id="@+id/buttonInscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/editTextPrenom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="#CEFF9800"
        android:padding="12dp"
        android:text="@string/inscription"
        android:textColor="#696969"
        android:textSize="20sp" />

    <!-- Lien pour la page de Connexion -->
    <TextView
        android:id="@+id/textDejaCompte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonInscription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/deja_compte"
        android:textSize="20sp"
        android:textColor="#696969"/>

    <TextView
        android:id="@+id/textLienConnexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textDejaCompte"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/connexion"
        android:textSize="20sp"
        android:textColor="#CEFF9800"/>

</androidx.constraintlayout.widget.ConstraintLayout>
